# lvgl-sdl

./: .gitignore  .gitmodules  README.md  lv_conf.h  lv_ex_conf.h
.github/workflows/: cmake.yml  linux.yml  windows.yml  xbox.yml
example/: CMakeLists.txt  Makefile  Makefile.nxdk  example.c  example.h  input_test.c  input_test.h  lv_conf.h  lv_ex_conf.h  main.c
lv_drv/: lv_if_drv_filesystem.c  lv_if_drv_filesystem.h  lv_sdl_drv_display.c  lv_sdl_drv_display.h  lv_sdl_drv_input.c  lv_sdl_drv_input.h
lvgl_drv/: lv_port_indev.c  lv_port_indev.h  lv_sdl_disp.c
